--- a/scss/style.css
+++ b/scss/style.css
@@ -1,27 +1,19 @@
-
 .container {
-	max-width: 1200px;
-	margin: 0 auto;
-	font-family: sans-serif;
-}
+  max-width: 1200px;
+  margin: 0 auto;
+  font-family: sans-serif; }
+  .container .author {
+    margin-bottom: uppercase; }
+    .container .author h1 {
+      text-transform: uppercase;
+      letter-spacing: 1.5em;
+      margin-bottom: 2em;
+      color: #500787; }
+  .container .verses {
+    font-family: 'Gamja Flower', cursive;
+    font-size: 2em;
+    text-align: justify; }
+    .container .verses .v2 {
+      color: red; }
 
-.author {
-	margin-bottom: 40px; 
-}
-
-.author h1 {
-	text-transform: uppercase;
-	letter-spacing: 1.5em;
-	margin-bottom: 2em;
-	color: #500787;
-}
-
-.verses {
-	font-family: 'Gamja Flower', cursive;
-	font-size: 2em;
-	text-align: justify;
-}
-
-.v1 {
-	color: #83CCD2;
-}
+/*# sourceMappingURL=style.css.map */
